--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "api": "^6.1.1",
     "express": "^4.17.1",
+    "ip": "^1.1.8",
     "netlify-cli": "^16.2.0",
     "netlify-lambda": "^2.0.15",
-    "serverless-http": "^2.7.0",
-    "api": "^6.1.1"
+    "request-ip": "^3.3.0",
+    "serverless-http": "^2.7.0"
   }
 }
